add size limit config option to search in files

BUG: 480489